# sqlite-vec

./: .clang-tidy  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  sqlite-vec.c  sqlite-vec.h  valgrind.supp
.claude/commands/: build.md  explore-knn.md  fix-header.md  setup.md  test-quick.md  test.md
.github/workflows/: ci.yml
fuzz/: fuzz_knn_query.c  fuzz_vector_parse.c
scripts/: benchmark_ivf_vs_bruteforce.py  fuzz.py  test-correctness-manual.py
site/: api-reference.md
site/.vitepress/: config.mts
site/features/: ivf.md  knn.md
tests/: benchmark.py  conftest.py  sqlite-vec-internal.h  test-auxiliary.py  test-edge-cases.py  test-error-paths.py  test-general.py  test-ivf.py  test-loadable.py  test-metadata.py  test-partition-keys.py  test-property.py  test-unit.c  utils.py
tests/afbd/: test-afbd.py
tests/correctness/: build.py  test-correctness.py
